// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/contentBlock return commentBlock and click on menuwrapper 1`] = `
<div>
  <div
    class="rowContents"
  >
    <div
      class="ContentBlock octo-block menuOpened"
    >
      <div
        class="octo-block-margin"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper override menuOpened"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
          <div
            class="Menu noselect bottom "
          >
            <div
              class="menu-contents"
            >
              <div
                class="menu-options"
              >
                <div>
                  <div
                    aria-label="Move up"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="menu-option__icon"
                      >
                        <svg
                          class="SortUpIcon Icon"
                          viewBox="0 0 100 100"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <polyline
                            points="50,20 50,80"
                          />
                          <polyline
                            points="30,40 50,20 70,40"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        Move up
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
                <div>
                  <div
                    aria-label="Move down"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="menu-option__icon"
                      >
                        <svg
                          class="SortDownIcon Icon"
                          viewBox="0 0 100 100"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <polyline
                            points="50,20 50,80"
                          />
                          <polyline
                            points="30,60 50,80 70,60"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        Move down
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
                <div>
                  <div
                    class="MenuOption SubMenuOption menu-option"
                    id="insertAbove"
                  >
                    <div
                      class="menu-option__icon"
                    >
                      <i
                        class="CompassIcon icon-plus AddIcon"
                      />
                    </div>
                    <div
                      class="menu-name"
                    >
                      Insert above
                    </div>
                    <i
                      class="CompassIcon icon-chevron-right"
                    />
                  </div>
                </div>
                <div>
                  <div
                    aria-label="Delete"
                    class="MenuOption TextOption menu-option"
                    role="button"
                  >
                    <div
                      class="d-flex"
                    >
                      <div
                        class="menu-option__icon"
                      >
                        <i
                          class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                        />
                      </div>
                    </div>
                    <div
                      class="menu-option__content"
                    >
                      <div
                        class="menu-name"
                      >
                        Delete
                      </div>
                    </div>
                    <div
                      class="noicon"
                    />
                  </div>
                </div>
              </div>
              <div
                class="menu-spacer hideOnWidescreen"
              />
              <div
                class="menu-options hideOnWidescreen"
              >
                <div
                  aria-label="Cancel"
                  class="MenuOption TextOption menu-option menu-cancel"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="noicon"
                    />
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Cancel
                    </div>
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="dnd-handle"
          draggable="true"
        >
          <svg
            class="GripIcon Icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </div>
      </div>
      <div
        class="addToRow "
        style="flex: 0 0 auto; height: 100%;"
      />
    </div>
    <div
      class="addToRow "
    />
  </div>
</div>
`;

exports[`components/contentBlock should match snapshot with commentBlock 1`] = `
<div>
  <div
    class="rowContents"
  >
    <div
      class="ContentBlock octo-block"
    >
      <div
        class="octo-block-margin"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
        <div
          class="dnd-handle"
          draggable="true"
        >
          <svg
            class="GripIcon Icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </div>
      </div>
      <div
        class="addToRow "
        style="flex: 0 0 auto; height: 100%;"
      />
    </div>
    <div
      class="addToRow "
    />
  </div>
</div>
`;

exports[`components/contentBlock should match snapshot with commentBlock readonly 1`] = `
<div>
  <div
    class="rowContents"
  >
    <div
      class="ContentBlock octo-block"
    >
      <div
        class="octo-block-margin"
      />
      <div
        class="addToRow "
        style="flex: 0 0 auto; height: 100%;"
      />
    </div>
    <div
      class="addToRow "
    />
  </div>
</div>
`;

exports[`components/contentBlock should match snapshot with dividerBlock 1`] = `
<div>
  <div
    class="rowContents"
  >
    <div
      class="ContentBlock octo-block"
    >
      <div
        class="octo-block-margin"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
        <div
          class="dnd-handle"
          draggable="true"
        >
          <svg
            class="GripIcon Icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </div>
      </div>
      <div
        class="addToRow "
        style="flex: 0 0 auto; height: 100%;"
      />
      <div
        class="DividerElement"
      />
    </div>
    <div
      class="addToRow "
    />
  </div>
</div>
`;

exports[`components/contentBlock should match snapshot with imageBlock 1`] = `
<div>
  <div
    class="rowContents"
  >
    <div
      class="ContentBlock octo-block"
    >
      <div
        class="octo-block-margin"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
        <div
          class="dnd-handle"
          draggable="true"
        >
          <svg
            class="GripIcon Icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </div>
      </div>
      <div
        class="addToRow "
        style="flex: 0 0 auto; height: 100%;"
      />
      <img
        alt=""
        class="ImageElement"
        src="test.jpg"
      />
    </div>
    <div
      class="addToRow "
    />
  </div>
</div>
`;

exports[`components/contentBlock should match snapshot with textBlock 1`] = `
<div>
  <div
    class="rowContents"
  >
    <div
      class="ContentBlock octo-block"
    >
      <div
        class="octo-block-margin"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
        <div
          class="dnd-handle"
          draggable="true"
        >
          <svg
            class="GripIcon Icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </div>
      </div>
      <div
        class="addToRow "
        style="flex: 0 0 auto; height: 100%;"
      />
      <div
        class="MarkdownEditor octo-editor  "
      >
        <div
          class="octo-editor-preview"
          data-testid="preview-element"
        />
      </div>
    </div>
    <div
      class="addToRow "
    />
  </div>
</div>
`;
